gitLens 연동여부 테스트

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <ul id="memoList"></ul>
     </div>
     
-<template id="memoTemplate">
+<template id="memoTemplate11">
     <li>
         <div class="memo_content"></div>
         <div class="container_memolist">
